--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -65,6 +65,7 @@ $focus-color: rgb(40, 215, 159);
 @media (max-width: 780px) {
   #cv {
     margin-top: 10em !important;
+    margin-bottom: 10em !important;
   }
   .cv-bttn {
     top: 3em !important;
@@ -78,7 +79,7 @@ $focus-color: rgb(40, 215, 159);
       margin-left: 0.5em;
       margin-right: 0.5em;
       margin-top: 12em;
-      margin-bottom: 40vw;
+      // margin-bottom: 20vh !important;
   
       &:hover {
         height: 85vh;
